[gd_scene load_steps=14 format=2]

[ext_resource path="res://GameUI/Menus/GamePausedMenu/game_paused_menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/GameComponents/ArenaPickups/BiggerBallPickup/art/bigger_ball_icon.png" type="Texture" id=2]
[ext_resource path="res://GameUI/ButtonContextBar/ButtonContextBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/GameUI/Menus/GamePausedMenu/art/pause_menu_background.png" type="Texture" id=4]
[ext_resource path="res://GameUI/MenuElements/ButtonElement.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/GameUI/fonts/custom/huge_font.res" type="BitmapFont" id=6]
[ext_resource path="res://GameUI/MenuElements/resources/dudelings_ui_theme.tres" type="Theme" id=7]
[ext_resource path="res://GameUI/Menus/SubMenus/resources/sub_menu_background_panel_stylebox.tres" type="StyleBox" id=8]
[ext_resource path="res://GameUI/fonts/main_font_bold_26.tres" type="DynamicFont" id=9]
[ext_resource path="res://Assets/GameComponents/ArenaPickups/SmallerBallPickup/art/smaller_ball_icon.png" type="Texture" id=10]
[ext_resource path="res://Assets/GameComponents/ArenaPickups/ExtraBallPickup/art/extra_ball_icon.png" type="Texture" id=11]
[ext_resource path="res://Assets/GameComponents/ArenaPickups/RandomBallPickup/art/random_ball_icon.png" type="Texture" id=12]
[ext_resource path="res://Assets/GameComponents/ArenaPickups/MysteryPickup/art/mystery_icon.png" type="Texture" id=13]

[node name="GamePausedMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="HeaderLabel" type="Label" parent="."]
margin_left = 39.0
margin_top = 24.0
margin_right = 450.0
margin_bottom = 84.0
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 6 )
text = "GAME PAUSED"
align = 1

[node name="ButtonElements" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -156.0
margin_top = -256.0
margin_right = -156.0
margin_bottom = -256.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContinueButtonElement" parent="ButtonElements" instance=ExtResource( 5 )]
margin_left = 89.0
margin_right = 589.0
margin_bottom = 120.0
rect_min_size = Vector2( 500, 120 )
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../LeaveMatchButtonElement")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../HowToPlayButtonElement")
focus_next = NodePath("../HowToPlayButtonElement")
focus_previous = NodePath(".")
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 6 )
text = "CONTINUE"
align = 1

[node name="HowToPlayButtonElement" parent="ButtonElements" instance=ExtResource( 5 )]
margin_left = 67.0
margin_top = 130.0
margin_right = 567.0
margin_bottom = 250.0
rect_min_size = Vector2( 500, 120 )
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../ContinueButtonElement")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../SettingsButtonElement")
focus_next = NodePath("../SettingsButtonElement")
focus_previous = NodePath("../ContinueButtonElement")
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 6 )
text = "HOW TO PLAY"
align = 1

[node name="SettingsButtonElement" parent="ButtonElements" instance=ExtResource( 5 )]
margin_left = 44.0
margin_top = 260.0
margin_right = 544.0
margin_bottom = 380.0
rect_min_size = Vector2( 500, 120 )
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../HowToPlayButtonElement")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../LeaveMatchButtonElement")
focus_next = NodePath("../LeaveMatchButtonElement")
focus_previous = NodePath("../HowToPlayButtonElement")
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 6 )
text = "SETTINGS"
align = 1

[node name="LeaveMatchButtonElement" parent="ButtonElements" instance=ExtResource( 5 )]
margin_left = 21.0
margin_top = 390.0
margin_right = 521.0
margin_bottom = 510.0
rect_min_size = Vector2( 500, 120 )
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../SettingsButtonElement")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../ContinueButtonElement")
focus_next = NodePath(".")
focus_previous = NodePath("../SettingsButtonElement")
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 6 )
text = "LEAVE MATCH"
align = 1

[node name="GameplayChoices" type="Panel" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 44.0
margin_top = -200.0
margin_right = 444.0
margin_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 400, 400 )
custom_styles/panel = ExtResource( 8 )

[node name="BackgroundContainer" type="VBoxContainer" parent="GameplayChoices"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 428, 0 )

[node name="Spacer0" type="Control" parent="GameplayChoices/BackgroundContainer"]
margin_right = 428.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect0" type="ColorRect" parent="GameplayChoices/BackgroundContainer"]
margin_top = 58.0
margin_right = 428.0
margin_bottom = 108.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.870588, 0.996078, 1, 1 )

[node name="Spacer1" type="Control" parent="GameplayChoices/BackgroundContainer"]
margin_top = 116.0
margin_right = 428.0
margin_bottom = 166.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect1" type="ColorRect" parent="GameplayChoices/BackgroundContainer"]
margin_top = 174.0
margin_right = 428.0
margin_bottom = 225.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.870588, 0.996078, 1, 1 )

[node name="Spacer2" type="Control" parent="GameplayChoices/BackgroundContainer"]
margin_top = 233.0
margin_right = 428.0
margin_bottom = 283.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect2" type="ColorRect" parent="GameplayChoices/BackgroundContainer"]
margin_top = 291.0
margin_right = 428.0
margin_bottom = 341.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.870588, 0.996078, 1, 1 )

[node name="Spacer3" type="Control" parent="GameplayChoices/BackgroundContainer"]
margin_top = 349.0
margin_right = 428.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MenuContainer" type="GridContainer" parent="GameplayChoices"]
anchor_right = 1.0
anchor_bottom = 1.0
columns = 2

[node name="PointsHeader" type="Label" parent="GameplayChoices/MenuContainer"]
margin_right = 181.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 9 )
text = "MATCH POINTS"
valign = 1

[node name="Points" type="Label" parent="GameplayChoices/MenuContainer"]
margin_left = 189.0
margin_right = 400.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.172549, 0.509804, 0.47451, 1 )
custom_fonts/font = ExtResource( 9 )
text = "1"
align = 2
valign = 1

[node name="BallTypeHeader" type="Label" parent="GameplayChoices/MenuContainer"]
margin_top = 59.0
margin_right = 181.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 9 )
text = "BALL TYPE"
valign = 1

[node name="BallType" type="Label" parent="GameplayChoices/MenuContainer"]
margin_left = 189.0
margin_top = 59.0
margin_right = 400.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.172549, 0.509804, 0.47451, 1 )
custom_fonts/font = ExtResource( 9 )
text = "NORMAL"
align = 2
valign = 1

[node name="MinBallsHeader" type="Label" parent="GameplayChoices/MenuContainer"]
margin_top = 118.0
margin_right = 181.0
margin_bottom = 168.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 9 )
text = "MIN BALLS"
valign = 1

[node name="MinBalls" type="Label" parent="GameplayChoices/MenuContainer"]
margin_left = 189.0
margin_top = 118.0
margin_right = 400.0
margin_bottom = 168.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.172549, 0.509804, 0.47451, 1 )
custom_fonts/font = ExtResource( 9 )
text = "1"
align = 2
valign = 1

[node name="BallSizeHeader" type="Label" parent="GameplayChoices/MenuContainer"]
margin_top = 176.0
margin_right = 181.0
margin_bottom = 226.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 9 )
text = "BALL SIZE"
valign = 1

[node name="BallSize" type="Label" parent="GameplayChoices/MenuContainer"]
margin_left = 189.0
margin_top = 176.0
margin_right = 400.0
margin_bottom = 226.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.172549, 0.509804, 0.47451, 1 )
custom_fonts/font = ExtResource( 9 )
text = "NORMAL"
align = 2
valign = 1

[node name="PickupRateHeader" type="Label" parent="GameplayChoices/MenuContainer"]
margin_top = 234.0
margin_right = 181.0
margin_bottom = 284.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 9 )
text = "PICKUP RATE"
valign = 1

[node name="PickupRate" type="Label" parent="GameplayChoices/MenuContainer"]
margin_left = 189.0
margin_top = 234.0
margin_right = 400.0
margin_bottom = 284.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.172549, 0.509804, 0.47451, 1 )
custom_fonts/font = ExtResource( 9 )
text = "NORMAL"
align = 2
valign = 1

[node name="HomeTeamHeader" type="Label" parent="GameplayChoices/MenuContainer"]
margin_top = 292.0
margin_right = 181.0
margin_bottom = 342.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 9 )
text = "HOME TEAM"
valign = 1

[node name="HomeTeam" type="Label" parent="GameplayChoices/MenuContainer"]
margin_left = 189.0
margin_top = 292.0
margin_right = 400.0
margin_bottom = 342.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.172549, 0.509804, 0.47451, 1 )
custom_fonts/font = ExtResource( 9 )
text = "KEYBOARD"
align = 2
valign = 1

[node name="AwayTeamHeader" type="Label" parent="GameplayChoices/MenuContainer"]
margin_top = 350.0
margin_right = 181.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 9 )
text = "AWAY TEAM"
valign = 1

[node name="AwayTeam" type="Label" parent="GameplayChoices/MenuContainer"]
margin_left = 189.0
margin_top = 350.0
margin_right = 400.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.172549, 0.509804, 0.47451, 1 )
custom_fonts/font = ExtResource( 9 )
text = "CONTROLLER ONE"
align = 2
valign = 1

[node name="PickupContainer" type="HBoxContainer" parent="."]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -68.0
margin_right = 348.0
margin_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 60, 60 )
custom_constants/separation = 10

[node name="ExtraBall" type="TextureRect" parent="PickupContainer"]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
texture = ExtResource( 11 )

[node name="RandomBall" type="TextureRect" parent="PickupContainer"]
margin_left = 70.0
margin_right = 130.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
texture = ExtResource( 12 )

[node name="SmallerBall" type="TextureRect" parent="PickupContainer"]
margin_left = 140.0
margin_right = 200.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
texture = ExtResource( 10 )

[node name="BiggeraBall" type="TextureRect" parent="PickupContainer"]
margin_left = 210.0
margin_right = 270.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
texture = ExtResource( 2 )

[node name="MysteryPickup" type="TextureRect" parent="PickupContainer"]
margin_left = 280.0
margin_right = 340.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
texture = ExtResource( 13 )

[node name="ButtonContextBar" parent="." instance=ExtResource( 3 )]
margin_left = -890.0
